fixed flex-wrap

--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body{
 }
 
 .item {
-  height: min-height;
+  /*height: 30px;*/
+  min-height: 30px;
   width: 30px;
   border: 1px solid #e8e4e6;
   background-color: #abd1c6;
@@ -28,11 +29,12 @@ body{
   margin: 10px 0;
   background: #e8e4e6;
   height: 150px;
+  flex-wrap: wrap;
 }
 
 .flex{
   display:flex;
-  /*height: 100px;8/
+  /*height: 100px;*/
   flex-direction: column;
 }
 
@@ -56,19 +58,20 @@ body{
 .center {
   justify-content: center;
   align-items: center;
-  align-content: space-between;
+  align-content: center;
 }
 
 .around {
   justify-content: space-around;
   align-items: baseline;
   align-content: space-around;
+  flex-wrap: wrap;
 }
 
 .between {
   justify-content: space-between;
   align-items: stretch;
-  align-content: stretch;
+  align-content: space-between;
 }
 
 .side {
